--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.21",
     "nodemon": "^2.0.15",
