--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "mongoose": "^6.1.7",
-    "typescript": "^4.5.4",
-    "cors": "^2.8.5"
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
